--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>We Go Wifi</title>
     <link rel="stylesheet" href="./style.css">
+    <script defer src="script.js"></script>
     <script src="./Font-Icon/fontawesome.min.js" defer></script>
 </head>
 
